--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -46,7 +46,7 @@
             style="@style/EditTextStyle"
             android:layout_marginTop="15dp"
             android:hint="@string/pin_code_colon"
-            android:inputType="number"/>
+            android:inputType="numberPassword"/>
 
         <Button
             android:id="@+id/log_in"
