--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -70,6 +70,13 @@
             android:layout_marginTop="20dp"
             android:text="@string/send"/>
 
+        <ImageView
+            android:layout_marginTop="10dp"
+            android:src="@drawable/social_links"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_gravity="left"/>
+
     </LinearLayout>
 
 </RelativeLayout>
