--- a/app/src/main/res/layout/fragment_wizard_step_three.xml
+++ b/app/src/main/res/layout/fragment_wizard_step_three.xml
@@ -44,15 +44,11 @@
                     android:background="@null"
                     android:src="@drawable/play_button"/>-->
 
-                <TextView
+                <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="150dp"
-                    android:gravity="center"
-                    android:layout_gravity="center"
-                    android:text="@string/get_5_KES_for_every_person_you_register"
-                    android:textColor="@color/dark_color"
-                    android:textSize="22sp"
-                    android:textStyle="bold"/>
+                    android:layout_height="200dp"
+                    android:layout_gravity="center_horizontal"
+                    android:src="@drawable/logo_wizard_three"/>
 
             </FrameLayout>
 
