--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -70,12 +70,43 @@
             android:layout_marginTop="20dp"
             android:text="@string/send"/>
 
-        <ImageView
-            android:layout_marginTop="10dp"
-            android:src="@drawable/social_links"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:layout_gravity="left"/>
+            android:layout_marginTop="10dp"
+            android:gravity="center"
+            android:orientation="horizontal"
+            android:weightSum="4">
+
+            <ImageView
+                android:id="@+id/facebook"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/contact_facebook_logo"/>
+
+            <ImageView
+                android:id="@+id/twitter"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/contact_twitter_logo"/>
+
+            <ImageView
+                android:id="@+id/linked_in"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/contact_linkedin_logo"/>
+
+            <ImageView
+                android:id="@+id/youtube"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:src="@drawable/contact_youtube_logo"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
